<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="override_control_mode"
        android:title="@string/override_control_mode"/>

    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_front"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_front"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_back"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_back"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_left"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_left"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_right"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_right"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_stop"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_stop"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_lf"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_lf"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_rf"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_rf"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_lb"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_lb"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
    <EditTextPreference
        android:dependency="override_control_mode"
        android:key="control_rb"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/control_rb"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"/>
</PreferenceScreen>